k8s/homework/00-app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name:  homework-deployment
  labels:
    app:  homework-server

spec:
  replicas: 5
  selector:
    matchLabels:
      app:  homework-server
  template:
    metadata:
      labels:
        app:  homework-server
        
    spec:
      containers:
        - name: homework-server
          image: localhost:5000/homework-server:latest
          ports:
            - name: web
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
