k8s/homework/01-services.yml
apiVersion: v1
kind: Service
metadata:
  name: homework-service

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: homework-server

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
