k8s/homework/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-server-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-server
            port:
              name: web
